--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body{
-    background-color: 107 94 79;
+    background-color: #101820;
 }
 button{
     border-radius: 10px;
 }
 div{
-    background-color: 240 198 132;
+    background-color: #FEE715;
     
 }
 title{
