--- a/style.css
+++ b/style.css
@@ -4,12 +4,17 @@ body{
 button{
     border-radius: 10px;
 }
-div{
+#heading{
     background-color:#FEE715;
-}
-title{
-color: red;
 }
 #credit{
 text-align: center;
+}
+#title{
+    text-align: center;
+}
+#nav{
+    background-color: black;
+    margin: 0;
+    padding: 0;
 }
